--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ header .banner {
 }
 
 h2 {
-  color: #6a1b9a;
+  color: #CC7E8F;
   text-align: center;
   margin-top: 40px;
 }
@@ -63,7 +63,7 @@ form input, form select {
   font-size: 1rem;
 }
 
-button {
+/*button {
   background-color: #7e57c2;
   color: white;
   padding: 12px;
@@ -72,6 +72,18 @@ button {
   font-size: 1rem;
   cursor: pointer;
   transition: background 0.3s ease;
+}*/
+.btn-confirmar {
+  background-color: #CC7E8F;
+  color: #fcd4dc;
+  font-family: 'Boogaloo', cursive;
+  font-size: 1.2rem;
+  padding: 0.75rem 1.5rem;
+  border: none;
+  border-radius: 12px;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+  box-shadow: 2px 2px 8px rgba(0,0,0,0.2);
 }
 
 button:hover {
@@ -148,6 +160,45 @@ background-color: transparent; /* blanco semitransparente */
   position: relative; /* necesario para posicionar el countdown */
   
 }
+
+.location-buttons {
+  position: absolute;
+  bottom: 34%; /* Ajusta esto si los botones quedan muy abajo o arriba */
+  left: 70%;
+  transform: translateX(-50%);
+  display: flex;
+  gap: 2rem; /* separación entre botones */
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.location-buttons1 {
+  position: absolute;
+  bottom: 17%; /* Ajusta esto si los botones quedan muy abajo o arriba */
+  left: 70%;
+  transform: translateX(-50%);
+  display: flex;
+  gap: 2rem; /* separación entre botones */
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.location-btn {
+  background-color: #fcd4dc;
+  color: #CC7E8F;
+  font-family: 'Boogaloo', cursive;
+  font-size: 1.2rem;
+  padding: 0.75rem 1.5rem;
+  border: none;
+  border-radius: 12px;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+  box-shadow: 2px 2px 8px rgba(0,0,0,0.2);
+}
+
+.location-btn:hover {
+  background-color: #fbc1d0;
+}
+
 .regalos {
   background-image: url("img/gift.png"); /* asegúrate que esta ruta sea correcta */
   background-size: cover;
